# Aestra

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .markdown-link-check.json  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODE_REVIEW_GPT54.md  CONTRIBUTING.md  Doxyfile  Doxyfile.backup  LICENSE  LICENSING.md  MACOS_SUPPORT.md  MAINTENANCE_SUMMARY.md  NOMAD_HYBRID_ENGINE_DESIGN.md  NOTICE  PHASE2_AUDIT.md  PLATFORM_ABSTRACTION_AUDIT_REPORT.md  README.md  SECURITY.md  SUPPORT.md  TEXT_RENDERING_ANALYSIS.md  audio_settings.conf  audit_results.txt  autosave.aes  autosave.nmd  autosave.nomadproj  benchmark_src  bolt.md  browser_settings.json  build_debug.txt  build_log.txt  crash_flag  (+12 more)
AestraAudio/: CMakeLists.txt  QUICK_REFERENCE.md  README.md  RTAUDIO_INTEGRATION.md
AestraAudio/include/: AestraUUID.h  AutomationCurve.h  CommandManager.h  GarbageCollector.h
AestraAudio/src/: AudioGraphBuilder.cpp  AudioRenderer.cpp  ChannelSlotMap.cpp  CommandManager.cpp  DummyAudioDriver.h  SamplePool.cpp
AestraCore/: CMakeLists.txt  README.md
AestraCore/include/: AestraAssert.h  AestraConfig.h  AestraDebug.h  AestraFile.h  AestraJSON.h  AestraLog.h  AestraMath.h  AestraProfiler.h  AestraThreading.h  AestraUnifiedProfiler.h  CPUDetection.h  PointerRegistry.h
AestraCore/src/: AestraCore.cpp  AestraProfiler.cpp  AestraThreading.cpp  AestraUnifiedProfiler.cpp  ConfigAssertTests.cpp  FileTests.cpp  LogTests.cpp  MathTests.cpp  PointerRegistry.cpp  ThreadingTests.cpp
AestraPlat/: CMakeLists.txt  README.md
AestraPlat/docs/: DPI_SUPPORT.md
AestraPlat/include/: AestraPlatform.h
AestraPlat/src/: Platform.cpp
AestraPlugins/AestraRumble/: CMakeLists.txt
AestraUI/: CHECKBOX_COLOR_IMPROVEMENTS.md  CMakeLists.txt  README.md  test_icon_rendering.md
AestraUI/Base/: NUIButton.cpp  NUIButton.h  NUICheckbox.cpp  NUICheckbox.h  NUIContextMenu.cpp  NUIContextMenu.h  NUICustomTitleBar.cpp  NUICustomTitleBar.h  NUICustomWindow.cpp  NUICustomWindow.h  NUIDropdown.cpp  NUIDropdown.h  NUIIcon.cpp  NUIIcon.h  NUILabel.cpp  NUILabel.h  NUIMenuBar.h  NUIProgressBar.cpp  NUIProgressBar.h  NUIScrollbar.cpp  NUIScrollbar.h  NUISegmentedControl.h  NUISlider.cpp  NUISlider.h  NUITextInput.cpp  NUITextInput.h
AestraUI/Common/: MusicHelpers.cpp  MusicHelpers.h
AestraUI/Config/: README.md  aestra_ui_config.yaml  slider_config.txt  slider_config.yaml  slider_tweaks.txt  titlebar_config.yaml
AestraUI/Core/: NUIAdaptiveFPS.cpp  NUIAdaptiveFPS.h  NUIAnimation.cpp  NUIAnimation.h  NUIApp.cpp  NUIApp.h  NUIComponent.cpp  NUIComponent.h  NUIConfigLoader.cpp  NUIConfigLoader.h  NUIDragDrop.cpp  NUIDragDrop.h  NUIFrameProfiler.cpp  NUIFrameProfiler.h  NUISliderConfig.cpp  NUISliderConfig.h  NUITheme.cpp  NUITheme.h  NUIThemeSystem.cpp  NUIThemeSystem.h  NUITitleBarConfig.cpp  NUITitleBarConfig.h  NUITypes.h  stb_image_impl.cpp
AestraUI/Graphics/: AestraTheme.h  GlassmorphismPass.cpp  GlassmorphismPass.h  NUIFont.cpp  NUIFont.h  NUIRenderer.cpp  NUIRenderer.h  NUISVGCache.cpp  NUISVGCache.h  NUISVGParser.cpp  NUISVGParser.h  NUITextRenderer.cpp  NUITextRenderer.h  NUITextRendererGDI.cpp  NUITextRendererGDI.h  NUITextRendererModern.cpp  NUITextRendererModern.h  NUITextRendererSDF.cpp  NUITextRendererSDF.h  NUITextRendererSTB.cpp  NUITextRendererSTB.h
AestraUI/Platform/: NUIPlatformBridge.cpp  NUIPlatformBridge.h
AestraUI/Shaders/: squircle.frag
AestraUI/Widgets/: GenericPluginEditor.cpp  GenericPluginEditor.h  NUIArrangementWidgets.cpp  NUIArrangementWidgets.h  NUICoreWidgets.cpp  NUICoreWidgets.h  NUIMixerWidgets.cpp  NUIMixerWidgets.h  NUIPianoRollWidgets.cpp  NUIPianoRollWidgets.h  NUIStepSequencer.cpp  NUIStepSequencer.h  NUIThematicWidgets.cpp  NUIThematicWidgets.h  NUITransportWidgets.cpp  NUITransportWidgets.h  NUIUtilityWidgets.cpp  NUIUtilityWidgets.h  NUIVisualWidgets.cpp  NUIVisualWidgets.h  PluginBrowserPanel.cpp  PluginBrowserPanel.h  PluginSelectorMenu.cpp  PluginSelectorMenu.h  PluginUIController.cpp  PluginUIController.h  UIItemSelector.cpp  UIItemSelector.h  UIMixerButtonRow.cpp  UIMixerButtonRow.h  UIMixerFXSummary.cpp  UIMixerFXSummary.h  UIMixerFader.cpp  UIMixerFader.h  UIMixerFooter.cpp  UIMixerFooter.h  UIMixerHeader.cpp  UIMixerHeader.h  UIMixerInspector.cpp  UIMixerInspector.h  (+12 more)
NomadAudio/: CMakeLists.txt
NomadAudio/docs/: SINC64_TURBO_PAPER.md
NomadAudio/include/: ASIODriver.h  AdaptiveResampler.h  AudioCommandQueue.h  AudioDeviceManager.h  AudioDriverTypes.h  AudioEngine.h  AudioGraph.h  AudioGraphBuilder.h  AudioRT.h  AudioRenderer.h  ClipResampler.h  ClipSource.h  EffectChain.h  FastMath.h  GarbageCollector.h  IAudioDriver.h  IntelligentDithering.h  Interpolators.h  MeterSnapshot.h  MetronomeEngine.h  MiniAudioDecoder.h  MixerChannel.h  MixerSIMD.h  NeuralAmp.h  PatternPlaybackEngine.h  PatternSource.h  PlaylistMixer.h  PlaylistModel.h  PlaylistSerializer.h  PlaylistTrack.h  PluginHost.h  PluginManager.h  PreviewEngine.h  SampleRateConverter.h  SampleRateConverterAVX512.h  SincAVX2.h  SincAVX512.h  SincNEON.h  TrackManager.h  UnitManager.h  (+1 more)
NomadAudio/src/: ASIODriver.cpp  AdaptiveResampler.cpp  AudioDeviceManager.cpp  AudioEngine.cpp  (+19 more)
Source/: AppBootstrap.h  AppLifecycle.h  ArsenalPanel.cpp  ArsenalPanel.h  AudioSettingsDialog.cpp  AudioSettingsDialog.h  AudioSettingsPage.cpp  AudioSettingsPage.h  AudioThreadConstraints.h  AudioVisualizer.cpp  AuditionPanel.cpp  CMakeLists.txt  FileBrowser.cpp  FileBrowser.h  FilePreviewPanel.cpp  FilePreviewPanel.h  GeneralSettingsPage.cpp  GeneralSettingsPage.h  Main.cpp  MixerPanel.cpp  MixerPanel.h  MixerView.cpp  MixerViewModel.cpp  MixerViewModel.h  NomadApp.cpp  NomadApp.h  NomadAudioController.cpp  NomadAudioController.h  NomadContent.cpp  NomadContent.h  NomadRootComponent.cpp  NomadRootComponent.h  NomadWindowManager.cpp  NomadWindowManager.h  OverlayLayer.h  PatternBrowserPanel.cpp  PianoRollPanel.cpp  PianoRollPanel.h  ProjectSerializer.cpp  ProjectSerializer.h  (+18 more)
Tests/: CMakeLists.txt  PluginScanTest.cpp  headless_scenarios.json
(+825 files in other folders)
